Phonenumber displayed for non-mobile browsers

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 			showEvent: 'click'
 			});
 		$('.bubbletel').tooltipsy({
-			content: '<a href="tel:+49 2236 48010444">Rufen Sie uns an.</a>',
+			content: '<a href="tel:+49 2236 48010444">+49 2236 48010444</a>',
 			showEvent: 'click'
 			});
 		$('.bubblecard').tooltipsy({
