--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 		background-image: url('./img/enterprise-solutions-bg-world.png'); 
 		background-image: url('./img/enterprise-solutions-bg-world.png'); 
 		background-image: url('./img/enterprise-solutions-bg-world.png'); 
-		background-position: 50% 15%;
+		background-position: 50% 5%;
 		background-repeat: no-repeat;
-		-webkit-background-size: contain;
-		-moz-background-size: contain;
-		background-size: contain;
+		-webkit-background-size: 95%;
+		-moz-background-size: 95%;
+		background-size: 95%;
 		color: #001337;
 		font-family: sans-serif;
 		max-width: 800px;
