ES website redesign.

--- a/index.html
+++ b/index.html
@@ -1,50 +1,67 @@
 <!DOCTYPE html>
-
+<html class="h-card" lang="de">
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-<link rel="stylesheet" href="css/style.css">
-
-<script>document.documentElement.className += ' js';</script>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>ES Enterprise Solutions GmbH</title>
+<link rel="stylesheet" href="css/main.css">
+<script src="/js/modernizr.js"></script>
+<script src="//use.typekit.net/tcx1sje.js"></script>
+<script>
+document.documentElement.className += ' js';
+try { Typekit.load(); } catch(e) {}
+</script>
 
-<body class="vcard">
+<div class="wrapper">
 
-	<h1>ES Enterprise Solutions</h1>
-	<h2>ES bedarf keines Claims.</h2>
+	<div role="main"> <!-- <main> -->
+		<h1><img src="img/logo.png" width="183" height="163" alt="ES Enterprise Solutions" title="ES Enterprise Solutions GmbH" class="u-photo"></h1>
+		<h2>Im kleinen Team für&nbsp;große&nbsp;Namen</h2>
+		<p>Die ES Enterprise Solutions GmbH entwickelt als Tochtergesellschaft der COMVEL <abbr title="Gesellschaft mit beschränkter Haftung">GmbH</abbr> maßgeschneiderte Software-Lösungen für die Online-Reisevermittlung.<br>Unser Team deckt alle Bereiche der Webentwicklung ab: Vom Screen- und <abbr title="Use Experience" lang="en">UX</abbr>-Design über Frontend- und Backend-Entwicklung bis hin zum Projektmanagement. Neben umfangreichem Know-how über zentrale Schnittstellen der Reisebranche hat das Team jahrelange Projekterfahrung in den Bereichen Communities, E-Commerce, CMS-Lösungen und Online Marketing.
+		<h3>Kunden/Projekte:</h3>
+		<ul>
+			<li><a href="http://www.comvel.de/" rel="contact"><img src="img/logo-comvel.png" width="176" height="49" alt="COMVEL"></a>
+			<li><a href="http://www.weg.de/" rel="contact"><img src="img/logo-wegde.png" width="175" height="68" alt="weg.de"></a>
+			<li><a href="http://www.ferien.de/" rel="contact"><img src="img/logo-feriende.png" width="176" height="32" alt="ferien.de"></a>
+			<li><a href="http://www.rtk-urlaub.de/" rel="contact"><img src="img/logo-rtkurlaubde.png" width="171" height="80" alt="rtk-urlaub.de"></a>
+		</ul>
+	</div> <!-- </main> -->
 
-	<ul>
-		<li class="mail">
-			<h3>Senden Sie uns eine E-Mail</h3>
-			<p><a href="mailto:info@es-enterprise-solutions.de" class="email">E-Mail senden</a></p>
-		</li>
-		<li class="phone">
-			<h3>Rufen Sie uns an</h3>
-			<p><a href="tel:+49 2236 48010444" class="tel">+49 2236 48010444</a></p>
-		</li>
-		<li class="download">
-			<h3>Kontaktdaten herunterladen</h3>
-			<p><a href="download/ES-Enterprise-Solutions.vcf" rel="download">vCard laden</a></p>
-		</li>
-	</ul>
+	<nav aria-labelledby="contact-headline">
+		<h2 id="contact-headline">Kontakt</h2>
+		<ul>
+			<li class="mail">
+				<i>Senden Sie uns eine E-Mail:</i>
+				<a href="mailto:info@es-enterprise-solutions.de" class="p-email">info@es-enterprise-solutions.de</a>
+			<li class="download">
+				<i>Kontaktdaten herunterladen:</i>
+				<a href="download/ES-Enterprise-Solutions.vcf" download>vCard laden</a>
+			<li class="phone">
+				<i>Rufen Sie uns an:</i>
+				<a href="tel:+49 2236 48010444" class="p-tel">+49 2236 48010-444</a>
+		</ul>
+	</nav>
 
-	<footer>
-		<h3>Impressum</h3>
-		<address>
-			<span class="fn org">ES Enterprise Solutions <abbr title="Gesellschaft mit beschränkter Haftung">GmbH</abbr></span><br>
-			<span class="adr">
-				<span class="street-address">Wesselinger Straße 22–30</span><br>
-				<span class="postal-code">50999</span> <span class="locality">Köln</span><br>
+</div>
+
+<footer aria-labelledby="footer-headline">
+
+	<div class="wrapper">
+		<h2 id="footer-headline">Impressum</h2>
+		<p>
+			<span class="p-name p-org">ES Enterprise Solutions <abbr title="Gesellschaft mit beschränkter Haftung">GmbH</abbr></span><br>
+			<span class="p-adr h-adr">
+				<span class="p-street-address">Wesselinger Straße 22–30</span><br>
+				<span class="p-postal-code">50999</span> <span class="p-locality">Köln</span><br>
 			</span>
-			<a href="http://es-enterprise-solutions.de/" class="url">es-enterprise-solutions.de</a><br>
+		<p>
 			Geschäftsführer: Wolfgang Lehr, Marc Zacher<br>
 			Gesellschaftssitz Köln<br>
 			Amtsgericht Köln, <abbr title="Handelsregisterblatt">HRB</abbr>&nbsp;73068
-		</address>
-	</footer>
+		<p>
+			<a href="http://es-enterprise-solutions.de/" class="u-url" rel="us">es-enterprise-solutions.de</a>
+	</div>
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-	<script src="js/tooltip.js"></script>
+</footer>
 
-</body>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="js/main.js"></script>
