Don't break names.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ try { Typekit.load(); } catch(e) {}
 				<span class="p-postal-code">50999</span> <span class="p-locality">Köln</span><br>
 			</span>
 		<p>
-			Geschäftsführer: Wolfgang Lehr, Marc Zacher<br>
+			Geschäftsführer: Wolfgang&nbsp;Lehr, Marc&nbsp;Zacher<br>
 			Gesellschaftssitz Köln<br>
 			Amtsgericht Köln, <abbr title="Handelsregisterblatt">HRB</abbr>&nbsp;73068
 		<p>
