--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ try { Typekit.load(); } catch(e) {}
 
 <div class="wrapper">
 
-	<div role="main"> <!-- <main> -->
+	<div role="main">
 		<h1><img src="img/logo.png" width="183" height="163" alt="ES Enterprise Solutions" title="ES Enterprise Solutions GmbH" class="u-photo"></h1>
 		<h2>Im kleinen Team für&nbsp;große&nbsp;Namen</h2>
 		<p>Die ES Enterprise Solutions GmbH entwickelt als Tochtergesellschaft der COMVEL <abbr title="Gesellschaft mit beschränkter Haftung">GmbH</abbr> maßgeschneiderte Software-Lösungen für die Online-Reisevermittlung.<br>Unser Team deckt alle Bereiche der Webentwicklung ab: Vom Screen- und <abbr title="Use Experience" lang="en">UX</abbr>-Design über Frontend- und Backend-Entwicklung bis hin zum Projektmanagement. Neben umfangreichem Know-how über zentrale Schnittstellen der Reisebranche hat das Team jahrelange Projekterfahrung in den Bereichen Communities, E-Commerce, CMS-Lösungen und Online Marketing.
@@ -24,7 +24,7 @@ try { Typekit.load(); } catch(e) {}
 			<li><a href="http://www.ferien.de/" rel="contact"><img src="img/logo-feriende.png" width="176" height="32" alt="ferien.de"></a>
 			<li><a href="http://www.rtk-urlaub.de/" rel="contact"><img src="img/logo-rtkurlaubde.png" width="171" height="80" alt="rtk-urlaub.de"></a>
 		</ul>
-	</div> <!-- </main> -->
+	</div>
 
 	<nav aria-labelledby="contact-headline">
 		<h2 id="contact-headline">Kontakt</h2>
