Layout changes, put navigation on small screens to the top.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="h-card" lang="de">
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <title>ES Enterprise Solutions GmbH</title>
 <link rel="stylesheet" href="css/main.css">
 <script src="/js/modernizr.js"></script>
@@ -13,18 +13,20 @@ try { Typekit.load(); } catch(e) {}
 
 <div class="wrapper">
 
-	<div role="main">
+	<main>
 		<h1><img src="img/logo.png" width="183" height="163" alt="ES Enterprise Solutions" title="ES Enterprise Solutions GmbH" class="u-photo"></h1>
 		<h2>Im kleinen Team für&nbsp;große&nbsp;Namen</h2>
 		<p>Die ES Enterprise Solutions GmbH entwickelt als Tochtergesellschaft der COMVEL <abbr title="Gesellschaft mit beschränkter Haftung">GmbH</abbr> maßgeschneiderte Software-Lösungen für die Online-Reisevermittlung.<br>Unser Team deckt alle Bereiche der Webentwicklung ab: Vom Screen- und <abbr title="Use Experience" lang="en">UX</abbr>-Design über Frontend- und Backend-Entwicklung bis hin zum Projektmanagement. Neben umfangreichem Know-how über zentrale Schnittstellen der Reisebranche hat das Team jahrelange Projekterfahrung in den Bereichen Communities, E-Commerce, CMS-Lösungen und Online Marketing.
-		<h3>Kunden/Projekte:</h3>
-		<ul>
-			<li><a href="http://www.comvel.de/" rel="contact"><img src="img/logo-comvel.png" width="176" height="49" alt="COMVEL"></a>
-			<li><a href="http://www.weg.de/" rel="contact"><img src="img/logo-wegde.png" width="175" height="68" alt="weg.de"></a>
-			<li><a href="http://www.ferien.de/" rel="contact"><img src="img/logo-feriende.png" width="176" height="32" alt="ferien.de"></a>
-			<li><a href="http://www.rtk-urlaub.de/" rel="contact"><img src="img/logo-rtkurlaubde.png" width="171" height="80" alt="rtk-urlaub.de"></a>
-		</ul>
-	</div>
+		<section id="portfolio" aria-labelledby="portfolio-headline">
+			<h3 id="portfolio-headline">Kunden/Projekte:</h3>
+			<ul>
+				<li><a href="http://www.comvel.de/" rel="contact"><img src="img/logo-comvel.png" width="176" height="49" alt="COMVEL"></a>
+				<li><a href="http://www.weg.de/" rel="contact"><img src="img/logo-wegde.png" width="175" height="68" alt="weg.de"></a>
+				<li><a href="http://www.ferien.de/" rel="contact"><img src="img/logo-feriende.png" width="176" height="32" alt="ferien.de"></a>
+				<li><a href="http://www.rtk-urlaub.de/" rel="contact"><img src="img/logo-rtkurlaubde.png" width="171" height="80" alt="rtk-urlaub.de"></a>
+			</ul>
+		</section>
+	</main>
 
 	<nav aria-labelledby="contact-headline">
 		<h2 id="contact-headline">Kontakt</h2>
@@ -57,8 +59,6 @@ try { Typekit.load(); } catch(e) {}
 			Geschäftsführer: Wolfgang&nbsp;Lehr, Marc&nbsp;Zacher<br>
 			Gesellschaftssitz Köln<br>
 			Amtsgericht Köln, <abbr title="Handelsregisterblatt">HRB</abbr>&nbsp;73068
-		<p>
-			<a href="http://es-enterprise-solutions.de/" class="u-url" rel="us">es-enterprise-solutions.de</a>
 	</div>
 
 </footer>
