--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@ document.documentElement.className += ' js';
 try { Typekit.load(); } catch(e) {}
 </script>
 
-<div class="wrapper">
+<div class="wrapper home">
 
 	<main>
-		<h1><img src="img/logo.png" width="183" height="163" alt="ES Enterprise Solutions" title="ES Enterprise Solutions GmbH" class="u-photo"></h1>
-		<h2>Im kleinen Team für&nbsp;große&nbsp;Namen</h2>
+
+		<h1><a href="/" rel="start"><img src="img/logo.png" width="183" height="163" alt="ES Enterprise Solutions" title="ES Enterprise Solutions GmbH" class="u-photo"></a></h1>
+		<!--<h2>Im kleinen Team für&nbsp;große&nbsp;Namen</h2>-->
+
 		<p>Die ES Enterprise Solutions GmbH entwickelt als Tochtergesellschaft der COMVEL <abbr title="Gesellschaft mit beschränkter Haftung">GmbH</abbr> maßgeschneiderte Software-Lösungen für die Online-Reisevermittlung.<br>Unser Team deckt alle Bereiche der Webentwicklung ab: Vom Screen- und <abbr title="Use Experience" lang="en">UX</abbr>-Design über Frontend- und Backend-Entwicklung bis hin zum Projektmanagement. Neben umfangreichem Know-how über zentrale Schnittstellen der Reisebranche hat das Team jahrelange Projekterfahrung in den Bereichen Communities, E-Commerce, CMS-Lösungen und Online Marketing.
+
+		<p><a href="jobs.html">Wir suchen Verstärkung!</a>
+
 		<section id="portfolio" aria-labelledby="portfolio-headline">
 			<h3 id="portfolio-headline">Kunden/Projekte:</h3>
 			<ul>
@@ -26,6 +31,7 @@ try { Typekit.load(); } catch(e) {}
 				<li><a href="http://www.rtk-urlaub.de/" rel="contact"><img src="img/logo-rtkurlaubde.png" width="171" height="80" alt="rtk-urlaub.de"></a>
 			</ul>
 		</section>
+
 	</main>
 
 	<nav aria-labelledby="contact-headline">
