O hai COMVEL link.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ try { Typekit.load(); } catch(e) {}
 		<h1><a href="/" rel="start"><img src="img/logo.png" width="183" height="163" alt="ES Enterprise Solutions" title="ES Enterprise Solutions GmbH" class="u-photo"></a></h1>
 		<!--<h2>Im kleinen Team für&nbsp;große&nbsp;Namen</h2>-->
 
-		<p>Die ES Enterprise Solutions GmbH entwickelt als Tochtergesellschaft der COMVEL <abbr title="Gesellschaft mit beschränkter Haftung">GmbH</abbr> maßgeschneiderte Software-Lösungen für die Online-Reisevermittlung.<br>Unser Team deckt alle Bereiche der Webentwicklung ab: Vom Screen- und <abbr title="Use Experience" lang="en">UX</abbr>-Design über Frontend- und Backend-Entwicklung bis hin zum Projektmanagement. Neben umfangreichem Know-how über zentrale Schnittstellen der Reisebranche hat das Team jahrelange Projekterfahrung in den Bereichen Communities, E-Commerce, CMS-Lösungen und Online Marketing.
+		<p>Die ES Enterprise Solutions GmbH entwickelt als Tochtergesellschaft der <a href="http://www.comvel.de/">COMVEL <abbr title="Gesellschaft mit beschränkter Haftung">GmbH</abbr></a> maßgeschneiderte Software-Lösungen für die Online-Reisevermittlung.<br>Unser Team deckt alle Bereiche der Webentwicklung ab: Vom Screen- und <abbr title="Use Experience" lang="en">UX</abbr>-Design über Frontend- und Backend-Entwicklung bis hin zum Projektmanagement. Neben umfangreichem Know-how über zentrale Schnittstellen der Reisebranche hat das Team jahrelange Projekterfahrung in den Bereichen Communities, E-Commerce, CMS-Lösungen und Online Marketing.
 
 		<p><a href="jobs.html">Wir suchen Verstärkung!</a>
 
