--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@ try { Typekit.load(); } catch(e) {}
 
 	<main>
 
-		<h1><a href="/" rel="start"><img src="img/logo.png" width="183" height="163" alt="ES Enterprise Solutions" title="ES Enterprise Solutions GmbH" class="u-photo"></a></h1>
+		<h1>
+			<a href="/" rel="start">
+				<picture width="183" height="163" alt="ES Enterprise Solutions" title="ES Enterprise Solutions GmbH">
+					<source src="img/logo@2x.png" media="(min-device-pixel-ratio: 1.4)">
+					<source src="img/logo.png">
+					<img src="img/logo.png" srcset="img/logo@2x.png 2x" width="183" height="163" alt="ES Enterprise Solutions" title="ES Enterprise Solutions GmbH" class="u-photo">
+				</picture>
+			</a>
+		</h1>
 		<!--<h2>Im kleinen Team für&nbsp;große&nbsp;Namen</h2>-->
 
 		<p>Die ES Enterprise Solutions GmbH entwickelt als Tochtergesellschaft der <a href="http://www.comvel.de/">COMVEL <abbr title="Gesellschaft mit beschränkter Haftung">GmbH</abbr></a> maßgeschneiderte Software-Lösungen für die Online-Reisevermittlung.<br>Unser Team deckt alle Bereiche der Webentwicklung ab: Vom Screen- und <abbr title="Use Experience" lang="en">UX</abbr>-Design über Frontend- und Backend-Entwicklung bis hin zum Projektmanagement. Neben umfangreichem Know-how über zentrale Schnittstellen der Reisebranche hat das Team jahrelange Projekterfahrung in den Bereichen Communities, E-Commerce, CMS-Lösungen und Online Marketing.
