Fixed JS paths.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <title>ES Enterprise Solutions GmbH</title>
 <link rel="stylesheet" href="css/main.css">
-<script src="/js/modernizr.js"></script>
+<script src="js/modernizr.js"></script>
 <script src="//use.typekit.net/tcx1sje.js"></script>
 <script>
 document.documentElement.className += ' js';
@@ -77,5 +77,5 @@ try { Typekit.load(); } catch(e) {}
 
 </footer>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="js/main.js"></script>
