--- a/index.html
+++ b/index.html
@@ -77,5 +77,4 @@ try { Typekit.load(); } catch(e) {}
 
 </footer>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="js/main.js"></script>
+<script src="js/main.js" defer></script>
