--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <title>ES Enterprise Solutions GmbH</title>
 <link rel="stylesheet" href="css/main.css">
+<link rel="icon" href="favicon.ico">
 <script src="js/modernizr.js"></script>
 <script src="//use.typekit.net/tcx1sje.js"></script>
 <script>
