--- a/jobs.html
+++ b/jobs.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html class="h-card" lang="de">
 <meta charset="utf-8">
+<meta name="ICBM" content="50.8589615, 7.0004065">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <title>Stellenangebote bei der ES Enterprise Solutions GmbH</title>
 <link rel="stylesheet" href="css/main.css">
-<link rel="icon" href="favicon.ico">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-precomposed.png" type="image/png">
 <script src="/js/modernizr.js"></script>
 <script src="//use.typekit.net/tcx1sje.js"></script>
 <script>
