Added favicon sizes.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <title>ES Enterprise Solutions GmbH</title>
 <link rel="stylesheet" href="css/main.css">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="16x16 24x24 32x32 64x64">
 <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-precomposed.png" type="image/png">
 <script src="js/modernizr.js"></script>
 <script src="//use.typekit.net/tcx1sje.js"></script>
