No more JS class setting, is done by Modernizr.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html class="h-card" lang="de">
 
 <!--
 	Wir suchen DICH! ♥
 	http://es-enterprise-solutions.de/jobs.html
 -->
 
+<html class="h-card no-js" lang="de">
 <meta charset="utf-8">
 <meta name="ICBM" content="50.8589615, 7.0004065">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -16,7 +16,6 @@
 <script src="js/modernizr.js"></script>
 <script src="//use.typekit.net/tcx1sje.js"></script>
 <script>
-document.documentElement.className += ' js';
 try { Typekit.load(); } catch(e) {}
 </script>
 
