--- a/jobs.html
+++ b/jobs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="h-card" lang="de">
+<html class="h-card no-js" lang="de">
 <meta charset="utf-8">
 <meta name="ICBM" content="50.8589615, 7.0004065">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -10,7 +10,6 @@
 <script src="/js/modernizr.js"></script>
 <script src="//use.typekit.net/tcx1sje.js"></script>
 <script>
-document.documentElement.className += ' js';
 try { Typekit.load(); } catch(e) {}
 </script>
 
