Removed jobs page.

--- a/jobs.html
+++ b/jobs.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html class="h-card no-js" lang="de">
 <meta charset="utf-8">
+<meta name="robots" content="noindex">
 <meta name="ICBM" content="50.8589615, 7.0004065">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <title>Stellenangebote bei der ES Enterprise Solutions GmbH</title>
